--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "netflix-clone",
   "version": "0.1.0",
-  "homepage": "https://kxsanchez323.github.io/netflix-clone/",
+  "homepage": "https://kxsanchez323.github.io/Netflix-clone",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
